# physx-draft

./: CMakeLists.txt
include/physx/core/: Engine.hpp  Renderer.hpp  Simulation.hpp
include/physx/core/objects/: Circle2D.hpp  Object2D.hpp  Rectangle2D.hpp
include/physx/dynamic/: RigidBody.hpp  RigidBody2D.hpp
include/physx/exceptions/: DivisionByZeroException.hpp  InvertibleMatrixException.hpp
include/physx/math/: MathConstants.hpp  Matrix2.hpp  Vec2.hpp  Vec3.hpp
include/physx/utilities/: FixedClock.hpp  Mouse.hpp  RandomNumberGenerator.hpp  Utils.hpp  Vec2Utils.hpp
src/: main.cpp
src/core/: Engine.cpp  Renderer.cpp  Simulation.cpp
src/core/objects/: Circle2D.cpp  Object2D.cpp  Rectangle2D.cpp
src/dynamic/: RigidBody.cpp  RigidBody2D.cpp
src/exceptions/: DivisionByZeroException.cpp  InvertibleMatrixException.cpp
src/math/: Matrix2.cpp
src/utilities/: FixedClock.cpp  Mouse.cpp  RandomNumberGenerator.cpp  Utils.cpp  Vec2Utils.cpp
test/unit-tests/: Vec2_TEST.cpp  Vec3_TEST.cpp
